# cct-qa-framework

./: .gitignore  README.md  pyproject.toml
analysis/: README.md  __init__.py  build.py  cluster.py  diff.py  grade.py  rollup.py
catalog/: README.md  __init__.py  cli.py  diff.py  fixtures.py  mapping.py  model.py  parser.py
core/: README.md  __init__.py  cli.py  descriptors.py  registry.py  result.py  runpaths.py  secrets.py  tls.py  validate.py
data/: README.md  fd_reason_codes.json
datagen/: .envrc  .gitignore  HOWTO_CREATE_PNR_DATA.md  LEARNINGS.md  README.md  README.txt
docs/: architecture.md  context.md  glossary.md
evidence/: README.md  __init__.py  build.py  render.py
jira/: README.md  __init__.py  cli.py  config.example.json  file.py  payload.py  render.py  select.py
metrics/: README.md  adapter.py  run.py
quality/: __init__.py  build.py  checks.py  grade.py  render.py  rubric.py
results/: fd_set5_validation_int_2026-07-17_085740.html  index.html
runner/: README.md  __init__.py  build.py  cli.py  orchestrator.py
seed/: README.md  __init__.py  cli.py  clone.py  dds_pin.py  engine.py  finalize.py  identity.py  kafka_seed.py  model.py  render.py  report.py  scenario.py  sit_index.py  source.py  verify.py  verify_uat.py
tests/: conftest.py  test_analysis_build.py  test_analysis_diff.py  test_analysis_grade.py  test_analysis_rollup.py  test_bookingchange_feed.py  test_canonicalize_verdict.py  test_catalog_cli.py  test_catalog_diff.py  test_catalog_join_all.py  test_catalog_model.py  test_catalog_parser.py  test_catalog_realdoc.py  test_chat_ui.py  test_checkpoints_wiring.py  test_cli.py  test_clone.py  test_dashboard.py  test_dds_pin.py  test_descriptors.py  test_download_anchors.py  test_engine.py  test_evidence_build.py  test_evidence_render.py  test_extract_verdict.py  test_fixtures_catalog.py  test_jira_cli.py  test_jira_file.py  test_jira_payload.py  test_jira_render.py  test_jira_select.py  test_kafka_seed.py  test_loader.py  test_mapping_catalog.py  test_metrics_adapter.py  test_metrics_run.py  test_nc_outcome.py  test_nc_seatchange_base_templates.py  test_preflight_creds.py  test_prelude.py  (+24 more)
tools/: convert_legacy_reports.py
(+27409 files in other folders)
